update blog and readme